--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,23 @@ body, html {
   color: var(--light-color);
 }
 
+/* Scroll styling for chrome */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+  border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--accent-color);
+  border-radius: 1rem;
+}
+
 /* 
   Coins information component styling
  */
@@ -235,7 +252,6 @@ body, html {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.2);
-  /* animation: name duration timing-function delay iteration-count direction fill-mode; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -245,6 +261,7 @@ body, html {
 .modal-content {
   min-width: 300px;
   max-width: 800px;
+  max-height: 80vh;
   width: 50vw;
   padding: 2rem;
   border-radius: 1rem;
@@ -257,7 +274,8 @@ body, html {
   animation: scale-to-one 0.3s linear 0.2s;
   animation-fill-mode: forwards;
   line-height: 2.2rem;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .modal-content span {
@@ -316,6 +334,45 @@ body, html {
 .section-title {
   margin: 2rem 4rem 0 4rem;
   text-align: center;
+}
+
+/* Resume Modal component styles */
+.orders-resume {
+  display: flex;
+  flex-direction: column;
+}
+
+.order-resume {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: solid 2px var(--primary-color);
+  padding: 1rem;
+}
+
+.order-resume-name {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.order-resume-name span {
+  font-size: 1.2rem;
+  margin: 0 1rem;
+}
+
+.order-resume-cost {
+  margin: 10px 0 0 0;
+  color: rgba(var(--primary-color-rgb), 0.8);
+}
+
+.order-resume-total {
+  font-size: 1.7rem;
+  align-self: flex-end;
+}
+
+.orders-resume-total {
+  align-self: flex-end;
+  font-size: 1.5rem;
 }
 
 /* Key frames */
